pod-init.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-init-sleep
spec:
  containers:
  - name: main-container
    image: busybox
    command: ["sh", "-c", "echo 'Conteneur principal lancé après init' && sleep 3600"]
