pod_volume.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-init-example
spec:
  containers:
  - name: main-container
    image: busybox
    command: ["sh", "-c", "echo Le conteneur principal démarre après l'init && sleep 3600"]
    volumeMounts:
    - name: shared-data
      mountPath: /data
  volumes:
  - name: shared-data
    emptyDir: {}
