serviceaccount.yaml


apiVersion: v1
kind: Pod
metadata:
  name: test-sa
  namespace: dev
spec:
  serviceAccountName: dev-sa
  containers:
  - name: busybox
    image: busybox
    command: ["sh", "-c", "sleep 3600"]


## exemple d'utilisation
# kubectl exec -n dev -it test-sa -- sh
## Puis à l’intérieur du pod :
# kubectl get pods   # si kubectl est installé ou utilise l'API directement
